<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    card_view:cardBackgroundColor="@color/someGray"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp"
    card_view:contentPadding="2dp"
    android:layout_margin="4dp">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:id="@+id/gradient_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/gradient_card_list"
        app:layout_constraintBottom_toBottomOf="@id/constraint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/constraint"/>
    <ImageView
        android:id="@+id/orig_list"
        android:layout_width="0dp"
        android:layout_height="248dp"
        android:src="@drawable/orig_on_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop" />
    <View
        android:id="@+id/gradient"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/gradient_back"
        app:layout_constraintBottom_toBottomOf="@id/orig_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/orig_list"/>
    <ImageView
        android:id="@+id/rectangle"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/shape_rectangle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="8dp" />
    <TextView
        android:id="@+id/ageFilm"
        android:layout_width="24dp"
        android:layout_height="16dp"
        android:layout_gravity="center"
        android:fontFamily="@font/roboto_black"
        android:gravity="center"
        android:text="@string/age_film"
        android:textColor="@color/someWhite"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle"
        app:layout_constraintEnd_toEndOf="@id/rectangle"
        app:layout_constraintStart_toStartOf="@id/rectangle"
        app:layout_constraintTop_toTopOf="@id/rectangle" />
    <TextView
        android:id="@+id/genre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:text="@string/genre"
        android:textColor="@color/genre_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/orig_list"
        android:textSize="8sp"
        android:layout_marginBottom="22dp"
        android:layout_marginStart="6dp" />

    <ImageView
        android:id="@+id/starOne"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:src="@drawable/star_icon_red"
        android:layout_marginTop="4dp"
        android:layout_marginStart="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genre" />
    <ImageView
        android:id="@+id/starTwo"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:src="@drawable/star_icon_red"
        android:layout_marginTop="4dp"
        android:layout_marginStart="2dp"
        app:layout_constraintStart_toEndOf="@id/starOne"
        app:layout_constraintTop_toBottomOf="@id/genre" />
    <ImageView
        android:id="@+id/starThree"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:src="@drawable/star_icon_red"
        android:layout_marginTop="4dp"
        android:layout_marginStart="2dp"
        app:layout_constraintStart_toEndOf="@id/starTwo"
        app:layout_constraintTop_toBottomOf="@id/genre" />
    <ImageView
        android:id="@+id/starFour"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:src="@drawable/star_icon_red"
        android:layout_marginStart="2dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@id/starThree"
        app:layout_constraintTop_toBottomOf="@id/genre" />
    <ImageView
        android:id="@+id/starFive"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:src="@drawable/star_icon_gray"
        android:layout_marginStart="2dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@id/starFour"
        app:layout_constraintTop_toBottomOf="@id/genre" />
    <TextView
        android:id="@+id/reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_reviews"
        android:textColor="@color/someGray"
        android:textSize="8sp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="2dp"
        app:layout_constraintStart_toEndOf="@id/starFive"
        app:layout_constraintTop_toBottomOf="@id/genre" />
    <TextView
        android:id="@+id/name_film"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name_film_list"
        android:fontFamily="@font/roboto_black"
        android:textSize="14sp"
        android:textColor="@color/someWhite"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/orig_list"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/time_film_list"
        android:fontFamily="@font/roboto_black"
        android:textSize="8sp"
        android:textColor="@color/gray_time"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/name_film"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>